View on smaller screens fixed

--- a/src/components/Single/components/Calculator.css
+++ b/src/components/Single/components/Calculator.css
@@ -97,7 +97,7 @@
 
   .form-container,
   .packs-container {
-    width: 100%;
+    width: 80%;
     margin: 2rem auto;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
